2006-01-24  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am:
	* docs/tutorial/icons/Makefile.am: Restored some files I messed up 
	by copying stuff into the wrong place.

2006-01-24  Murray Cumming <murrayc@murrayc.com>

	* docs/tutorial/Makefile.am:
	* docs/tutorial/icons/Makefile.am:
	* docs/tutorial/icons/caution.png:
	* docs/tutorial/icons/home.png:
	* docs/tutorial/icons/important.png:
	* docs/tutorial/icons/next.png:
	* docs/tutorial/icons/note.png:
	* docs/tutorial/icons/prev.png:
	* docs/tutorial/icons/tip.png:
	* docs/tutorial/icons/up.png:
	* docs/tutorial/icons/warning.png: Added missing files.

2006-01-23  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

	* docs/tutorial/gtkmm-tut.xml: improve the markup of the tutorial by
	replacing a lot of the generic 'literal' tags with more specific ones like
	'classname' or 'function'.  Also marked up a bunch of things that weren't
	marked up at all.

2006-01-18  Murray Cumming  <murrayc@murrayc.com>

	* docs/tutorial/figures/Makefile.am:
	* docs/tutorial/figures/*.png: Several updated screenshots from 
	Jonathon Jongsma. Bug #327142.

2006-01-18  Murray Cumming <murrayc@murrayc.com>

	* gtk/src/gtk_docs_override.xml: Added some new overrides for functions that 
	mention free() or NULL.

2006-01-15  Jonathon Jongsma  <jonathon.jongsma@gmail.com>

        * docs/tutorial/Makefile.am: Modified makefile to pass some XSL parameters
        to the xsltproc.  For example, where to find icon images, what filename to
        use as a CSS stylesheet, etc.
        * docs/tutorial/insert_example_code.pl: Modified script to mark up the
        filename with a docbook 'filename' element so that it can be styled more
        easily
        * docs/tutorial/style.css: add a new CSS stylesheet for styling the
        tutorial.  The CSS is based on the GNOME stylesheets used for yelp but a
        also designed to fit the theme of the gtkmm website.