@@ -64,11 +64,7 @@ name
 
 <abstract>
 
-<para>Not all sections have
-been completed - some have not been started.  Some chapters have been
-written, but not edited or proofread.  Since they do contain helpful
-information, they have been included, and are marked &quot;draft&quot;.
-We are working hard to make this helpful and accurate.  We would very much appreciate any reports of
+<para>We very much appreciate any reports of
 inaccuracies or other errors in this document.  Contributions are also
 most welcome.  Post your suggestions, critiques or addenda to the <ulink
 url="mailto:gtkmm-list@gnome.org">&gtkmm; mailing list</ulink>
@@ -78,7 +74,7 @@ url="mailto:gtkmm-list@gnome.org">&gtkmm; mailing list</ulink>
 </abstract>
 
 <copyright>
-<year>2002</year>
+<year>2002-2006</year>
 <holder>Murray Cumming</holder>
 </copyright>
 
@@ -4131,10 +4127,10 @@ font.
   </para>
   <note>
       <title>Cairo and Pango</title>
-      Although Cairo can render text, it's not meant to be a replacement for
+      <para>Although Cairo can render text, it's not meant to be a replacement for
       Pango.  Pango is a better choice if you need to perform more advanced
       text rendering such as wrapping or ellipsizing text.  Drawing text with
-      Cairo should only be done if the text is part of a graphic.
+      Cairo should only be done if the text is part of a graphic.</para>
   </note>
   <para>
       In this section of the tutorial, we'll cover the basic Cairo drawing
@@ -4211,7 +4207,7 @@ myContext->set_line_width(2.0);</programlisting>
         <function>restore()</function> restores the state from the
         matching paired <function>save()</function>.
         <tip>
-            It is good practice to put all modifications to the graphics state
+            <para>It is good practice to put all modifications to the graphics state
             between <function>save()</function>/<function>restore()</function>
             function calls. For example, if you have a function that takes a
             <classname>Cairo::Context</classname> reference as an argument, you
@@ -4222,7 +4218,7 @@ myContext->set_line_width(2.0);</programlisting>
     // change graphics state
     // peform drawing operations
     context->restore();
-}</programlisting>
+}</programlisting></para>
         </tip>
     </para>
   </sect1>
@@ -4236,7 +4232,7 @@ myContext->set_line_width(2.0);</programlisting>
         coordinate system is located in the upper-left corner of the window
         with positive x values to the right and positive y values going down.
         <tip>
-            Since the Cairo graphics library was written with support for
+            <para>Since the Cairo graphics library was written with support for
             multiple output targets (the X window system, PNG images, OpenGL,
             etc), there is a distinction between user-space and device-space
             coordinates.  The mapping between these two coordinate systems
@@ -4246,7 +4242,7 @@ myContext->set_line_width(2.0);</programlisting>
             full width and height of a window both range from 0 to 1 (the 'unit
             square') or some other mapping that works for your application.
             this can be done with the
-            <function>Cairo::Context::scale()</function> function.
+            <function>Cairo::Context::scale()</function> function.</para>
         </tip>
     </para>
 
@@ -4272,13 +4268,13 @@ myContext->set_line_width(2.0);</programlisting>
         current path will be cleared so that you can start on your next path.
     </para>
         <tip>
-            Many Cairo drawing functions have a <function>_preserve()</function>
+            <para>Many Cairo drawing functions have a <function>_preserve()</function>
             variant.  Normally drawing functions such as
             <function>clip()</function>, <function>fill()</function>, or
             <function>stroke()</function> will clear the current path.  If you
             use the <function>_preserve()</function> variant, the current path
             will be retained so that you can use the same path with the next
-            drawing function.
+            drawing function.</para>
         </tip>
 
     <figure id="figure-drawingarea-lines">
@@ -4314,10 +4310,10 @@ myContext->set_line_width(2.0);</programlisting>
         <function>stroke()</function>.
     </para>
     <tip>
-        <title>Drawing with relative coordinates</title>In the example above
-        we drew everything using absolute coordinates.  You can also draw using
+        <title>Drawing with relative coordinates</title>
+        <para>In the example above we drew everything using absolute coordinates.  You can also draw using
         relative coordinates.  For a straight line, this is done with the
-        function <function>Cairo::Context::rel_line_to()</function>.
+        function <function>Cairo::Context::rel_line_to()</function>.</para>
     </tip>
     </sect2>
     <sect2>
@@ -7116,7 +7112,6 @@ practical - and sensible - to subclass a button for that purpose.
 </appendix>
 
 <appendix id="sec-appendix-gdk-drawing">
-<sect1>
 <title>Drawing With GDK</title>
 <para>The GDK drawing API described here is now deprecated, in favour of Cairo. See the <link linkend="sec-drawingarea">DrawingArea</link> chapter for information about the Cairo API.</para> 
 <para>
@@ -7176,7 +7171,6 @@ some_gc.set_foreground(some_color);</programlisting>
       run into <classname>Gdk::GC</classname> objects quite often, so it's
       important to know what they are and how they're used.
   </para>
-</sect1>
 </appendix>
 
 </book>
