@@ -1,5 +1,13 @@
 2006-01-24  Murray Cumming  <murrayc@murrayc.com>
 
+	* docs/tutorial/Makefile.am: Upload the style.css file when doing 
+	post-html.
+	* docs/tutorial/gtkmm-tut.xml: Add para tags to tip and note tags, 
+	as noticed by the validate-original make target. Remove some of 
+	the initial paragraph about it being a draft. 
+
+2006-01-24  Murray Cumming  <murrayc@murrayc.com>
+
 	* docs/tutorial/Makefile.am:
 	* docs/tutorial/icons/Makefile.am: Restored some files I messed up 
 	by copying stuff into the wrong place.
